tests/negative/unknown_exported_name.glyph
module neg

import std/result { Bogus }

fn main() -> number {
  return 0
}
